@@ -227,6 +227,8 @@ Version 1.5.2 - SVN
     etc. (#1818398).
   - PAGE_NAME might not be defined in all plugins, which might cause a
     "not defined" error on session timeouts.
+  - Allow custom session handlers to work correctly (and be defined at the
+    application level with SquirrelMail).
 
 Version 1.5.1 (branched on 2006-02-12)
 --------------------------------------
